--- a/34396-h/34396-h.htm
+++ b/34396-h/34396-h.htm
@@ -2,6 +2,8 @@
 <HTML>
 <HEAD>
 
+<LINK REL="coverpage" HREF="images/img-cover.jpg">
+
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 
 <TITLE>
